--- a/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/panels/collapsible-panel/collapsible-panel.mod.css
@@ -9,7 +9,7 @@
 
 .container {
   box-shadow: var(--shadow-8-second);
-  background-color: var(--new-color-gray-95);
+  background-color: var(--color-gray-95);
   border-radius: var(--border-radius-6);
   position: relative;
   min-width: 550px;
@@ -29,7 +29,7 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: var(--new-color-gray-95);
+  background-color: var(--color-gray-95);
   border-top-right-radius: var(--border-radius-6);
   border-top-left-radius: var(--border-radius-6);
 }
@@ -43,7 +43,7 @@
 }
 
 .container-open .header-container {
-  border-bottom: 1px var(--new-color-gray) solid;
+  border-bottom: 1px var(--color-gray) solid;
 }
 
 .header {
@@ -51,7 +51,7 @@
   flex: 1;
   align-items: center;
   list-style-type: none;
-  border-bottom: 1px var(--new-color-gray-95) solid;
+  border-bottom: 1px var(--color-gray-95) solid;
   justify-content: space-between;
 
   /*
@@ -98,11 +98,11 @@
 }
 
 .header-icon-primary {
-  background-color: var(--new-color-green-25);
+  background-color: var(--color-green-25);
 }
 
 .header-icon-urgent {
-  background-color: var(--new-color-orange);
+  background-color: var(--color-orange);
 }
 
 .content {
