--- a/inputs/localized-text-input/localized-text-input.mod.css
+++ b/inputs/localized-text-input/localized-text-input.mod.css
@@ -22,10 +22,10 @@
   flex: 1 0 auto;
   height: var(--height-input);
   line-height: var(--height-input);
-  background-color: var(--new-color-gray-95);
+  background-color: var(--color-gray-95);
   border-top-left-radius: var(--border-radius-6);
   border-bottom-left-radius: var(--border-radius-6);
-  border: var(--border-radius-1) solid var(--new-color-gray);
+  border: var(--border-radius-1) solid var(--color-gray);
   border-right: 0;
   padding: 0 var(--spacing-8);
   transition: var(--transition-standard);
@@ -65,35 +65,35 @@
 
 .pristine {
   composes: input;
-  border-color: var(--new-color-gray-60);
-  color: var(--new-color-black);
+  border-color: var(--color-gray-60);
+  color: var(--color-black);
 }
 
 .warning {
   composes: input;
-  color: var(--new-color-orange);
-  border-color: var(--new-color-orange);
+  color: var(--color-orange);
+  border-color: var(--color-orange);
 }
 
 .error {
   composes: input;
-  color: var(--new-color-red);
-  border-color: var(--new-color-red);
+  color: var(--color-red);
+  border-color: var(--color-red);
 }
 
 .disabled {
   composes: input;
   cursor: not-allowed;
-  background-color: var(--new-color-navy-98);
-  border-color: var(--new-color-gray);
-  color: var(--new-color-gray-60);
+  background-color: var(--color-navy-98);
+  border-color: var(--color-gray);
+  color: var(--color-gray-60);
   opacity: 1; /* fix for mobile safari */
 }
 
 .readonly {
   composes: input;
-  color: var(--new-color-gray-60);
-  border-color: var(--new-color-gray);
+  color: var(--color-gray-60);
+  border-color: var(--color-gray);
   cursor: default;
 }
 
@@ -101,6 +101,6 @@
 
 .pristine:active,
 .pristine:focus {
-  border-color: var(--new-color-green-25);
-  color: var(--new-color-black);
+  border-color: var(--color-green-25);
+  color: var(--color-black);
 }
