--- a/inputs/money-numeric-input/money-numeric-input.mod.css
+++ b/inputs/money-numeric-input/money-numeric-input.mod.css
@@ -7,7 +7,7 @@
   border-radius: var(--border-radius-6);
   border-style: solid;
   border-width: 1px;
-  color: var(--new-color-black);
+  color: var(--color-black);
   font-weight: 500;
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif !important;
@@ -20,16 +20,16 @@
 
 .input {
   composes: input-text;
-  background-color: var(--new-color-gray-95);
-  border-color: var(--new-color-white);
+  background-color: var(--color-gray-95);
+  border-color: var(--color-white);
   width: 100%;
 }
 
 .disabled {
   composes: input;
   background: none;
-  border: 1px solid var(--new-color-gray);
-  color: var(--new-color-gray-60);
+  border: 1px solid var(--color-gray);
+  color: var(--color-gray-60);
   word-break: break-all;
   hyphens: auto; /* still not supported on Chrome */
 
@@ -41,12 +41,12 @@
 
 .warning {
   composes: input;
-  color: var(--new-color-orange);
-  border-color: var(--new-color-orange);
+  color: var(--color-orange);
+  border-color: var(--color-orange);
 }
 
 .error {
   composes: input;
-  color: var(--new-color-red);
-  border-color: var(--new-color-red);
+  color: var(--color-red);
+  border-color: var(--color-red);
 }
