refactor(money-input): removing cleave and using html input

--- a/inputs/money-input/money-input.mod.css
+++ b/inputs/money-input/money-input.mod.css
@@ -35,6 +35,12 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+.input::-webkit-inner-spin-button,
+.input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 /* Tones */
 
 .amount-default {
