--- a/label/label.mod.css
+++ b/label/label.mod.css
@@ -13,8 +13,8 @@
 }
 
 .tone-positive {
-  background-color: var(--color-green-95);
-  border: 1px solid var(--color-green);
+  background-color: var(--color-green-85);
+  border: 1px solid var(--color-green-40);
   border-radius: 2px;
 }
 
@@ -26,7 +26,7 @@
 
 .tone-primary {
   background-color: var(--color-green-95);
-  border: 1px solid var(--color-green);
+  border: 1px solid var(--color-green-25);
   border-radius: 2px;
 }
 
