--- a/typography/text/text.mod.css
+++ b/typography/text/text.mod.css
@@ -80,7 +80,7 @@ small {
 }
 
 .primary {
-  color: var(--color-green);
+  color: var(--color-green-25);
 }
 
 .secondary {
@@ -88,7 +88,7 @@ small {
 }
 
 .positive {
-  color: var(--color-green);
+  color: var(--color-green-40);
 }
 
 .negative {
