fix(navbar): adds navbar-green theme

--- a/icons/icons.mod.css
+++ b/icons/icons.mod.css
@@ -20,6 +20,10 @@
   fill: var(--color-green-25);
 }
 
+.theme-navbar-green {
+  fill: var(--color-green-40);
+}
+
 .theme-orange {
   fill: var(--color-orange);
 }
