fix(textarea): addresses comments from review

--- a/inputs/text-area/text-area.mod.css
+++ b/inputs/text-area/text-area.mod.css
@@ -1,6 +1,4 @@
-@import '../../materials/tokens/borders.mod.css';
-@import '../../materials/tokens/backgrounds.mod.css';
-@import '../../materials/tokens/fonts.mod.css';
+@import '../../materials/tokens';
 @import '../../materials/transitions.mod.css';
 @import '../../materials/spacings.mod.css';
 
