refactor(colors): small adjustments overall

--- a/date-picker/date-picker-ct-theme.mod.css
+++ b/date-picker/date-picker-ct-theme.mod.css
@@ -22,22 +22,26 @@
   border-color: var(--color-green);
 }
 
+:global(.flatpickr-day:hover) {
+  background-color: var(--color-blue-95);
+}
+
 :global(.flatpickr-prev-month:hover),
 :global(.flatpickr-next-month:hover) {
   color: var(--color-green);
 }
 :global(.flatpickr-prev-month:hover svg),
 :global(.flatpickr-next-month:hover svg) {
-  fill: var(--color-green);
+  fill: var(--color-green) !important;
 }
 
 :global(.flatpickr-day.today) {
-  border-color: var(--color-orange);
+  border-color: var(--color-navy-40);
 }
 :global(.flatpickr-day.today:hover),
 :global(.flatpickr-day.today:focus) {
-  border-color: var(--color-orange);
-  background: var(--color-orange);
+  border-color: var(--color-navy-40);
+  background: var(--color-navy-40);
 }
 
 :global(span.flatpickr-day.today:not(.selected)),
@@ -46,13 +50,13 @@
   border-color: none;
   border-right-color: transparent;
   border-top-color: transparent;
-  border-bottom-color: var(--color-orange);
+  border-bottom-color: var(--color-navy-40);
 }
 
 :global(span.flatpickr-day.today:not(.selected):hover),
 :global(span.flatpickr-day.prevMonthDay.today:not(.selected):hover),
 :global(span.flatpickr-day.nextMonthDay.today:not(.selected):hover) {
-  border: 1px solid var(--color-orange);
+  border: 1px solid var(--color-navy-40);
 }
 
 :global(.flatpickr-input[disabled]) {
