--- a/inputs/text-input/text-input.mod.css
+++ b/inputs/text-input/text-input.mod.css
@@ -83,6 +83,6 @@
 
 .pristine:active,
 .pristine:focus {
-  border-color: var(--color-green-25);
+  border-color: var(--color-green);
   color: var(--color-black);
 }
