refactor(typography): add truncate to typograhy components

--- a/typography/text/text.mod.css
+++ b/typography/text/text.mod.css
@@ -102,3 +102,9 @@ small {
 .wrap {
   white-space: pre-wrap;
 }
+
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
