fix(tokens): renames file extension

--- a/inputs/text-area/text-area.mod.css
+++ b/inputs/text-area/text-area.mod.css
@@ -1,4 +1,4 @@
-@import '../../materials/tokens';
+@import '../../materials/tokens/tokens.mod.css';
 @import '../../materials/transitions.mod.css';
 @import '../../materials/spacings.mod.css';
 
