--- a/tag/tag.mod.css
+++ b/tag/tag.mod.css
@@ -101,7 +101,7 @@
 }
 
 .removeWrapper:hover {
-  background: var(--color-green);
+  background: var(--color-gray-60);
   box-shadow: var(--shadow-1-first), var(--shadow-1-second);
 }
 
