refactor(collapsible-panel): improvements from code reviews

--- a/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/panels/collapsible-panel/collapsible-panel.mod.css
@@ -44,7 +44,7 @@
   background-color: var(--color-greyAlabaster);
 }
 
-.closed-header {
+.header-closed {
   border-bottom-left-radius: var(--border-radius-6);
   border-bottom-right-radius: var(--border-radius-6);
 }
