--- a/buttons/icon-button/icon-button.mod.css
+++ b/buttons/icon-button/icon-button.mod.css
@@ -131,7 +131,7 @@
   receive any actions */
 
 .active.disabled.theme-blue {
-  background-color: color(var(--color-blue) lightness(74%));
+  background-color: color-mod(var(--color-blue) lightness(74%));
   color: var(--color-white);
   box-shadow: var(--shadow-9-first), var(--shadow-9-second),
     var(--shadow-9-third);
@@ -146,7 +146,7 @@
 }
 
 .active.theme-blue:hover {
-  background-color: color(var(--color-blue) lightness(74%));
+  background-color: color-mod(var(--color-blue) lightness(74%));
 }
 
 /*
