refactor(collapsible-panel): adjust the min-width of the component to 0 when it is condensed

--- a/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/panels/collapsible-panel/collapsible-panel.mod.css
@@ -17,6 +17,10 @@
   padding: 0;
 }
 
+.container-condensed {
+  min-width: 0;
+}
+
 .container-theme-light {
   composes: base-container;
   background-color: var(--color-white);
